<resources>
    <string name="app_name">Snapshot</string>
    <string name="Nombre_completo">Nombre completo</string>
    <string name="userID">ID usuario</string>
    <string name="Mail">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Regístrate">Regístrate</string>
    <string name="siCuenta">¿Tienes una cuenta?</string>
    <string name="iniciarSesion">Iniciar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="usuarios">Usuarios</string>
    <string name="BtnSeguirUsuari">Seguir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="editarUsuario">Editar usuario</string>
    <string name="guardar">Guardar</string>
    <string name="seleccionarUsuario">Selecciona un usuario para seguirle</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="errorConectar">Error al conectar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="desearSeguir">Deseas seguir a</string>
    <string name="yaSigueUsuario">Ya sigues al usuario</string>
    <string name="operacionExitosa">Operacion exitosa</string>
    <string name="usuario_pass_incorrect">Usuario o contraseña incorrecto</string>
    <string name="nombreNoDisponible">Nombre no disponible</string>
    <string name="eliminacionCuenta">Deseas eliminar la cuenta ?</string>
    <string name="eliminar">Eliminar</string>
    <string name="campoObligatorio">Campo obligatorio</string>
    <string name="mailValido">Porfavor introduce un correo válido</string>
    <string name="noDisponible">No disponible en la beta</string>
    <string name="sinDatos">Sin datos para cargar</string>
    <string name="upload">Subiendo...</string>
    <string name="esperePorfavor">Espere porfavor...</string>
    <string name="selecionarImagen">Selecciona una imagen</string>
    <string name="dadoLike">Has dado me gusta a la publicacion</string>
</resources>
